@@ -3,8 +3,12 @@ Hexen II: Hammer of Thyrion
 Development Progress	:
 ---------------------------
 
-2010-12-20 (SVN):
+2010-12-21 (SVN):
+    * timidity/dls1.h, dls2.h, instrum_dls.c, timidity_internal.h: Fix most
+      of the gcc pedantic warnings. Make it compile using very old gcc.
     * timidity/options.h:  Use NULL as terminator in PATCH_EXT_LIST, not 0.
+
+2010-12-20 (SVN):
     * timidity.c (mid_exit): Remove unnecessary NULL assignment to members
       when freeing the parents.
     * Make timidity to compile using cplusplus compilers: add missing type
